All_Component_DX/force-app/main/default/objects/SM_IG_Job_Child__c/fields/IG_Job_Request__c.field-meta.xml
<CustomField>
    <fullName>IG_Job_Request__c</fullName>
    <label>Integration Job Request</label>
    <referenceTo>SM_IG_Job_Request__c</referenceTo>
    <relationshipLabel>Integration Job Child (Integration Job Request)</relationshipLabel>
    <relationshipName>Integration_Job_Child</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>