All_Component_DX/force-app/main/default/objects/SM_IG_Job_Child__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Reconcile Object</description>
    <inlineHelpText>Reconcile Object</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>